# ProgettoAI-Mosaico

./: .gitignore  README.md  config.yml  grafana.db  note.txt  outputmcp-1.txt  pyproject.toml  schema_template.json  test.json
backend_api/: main.py  server_api.py
cache/: matching_cache_v0.1.json
config/: config.yml  device_list_rules.yml
data/: dict_v1.json  dictionary_v0.1.json  dictionary_v0.2.json  dizionario.json  kb_v0.1.json  match.json  patch.json  schema.json  template_base_v0.1.json  template_base_v1.json
device_list/: ali.json  ccravenna.json  famila_ravenna.json  vigoda_ali_GENERATOR.json
doc/: indice.md
frontend/: eslint.config.js  i18n.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
mcp_server/: core.py  server.py
note/: Workflow.txt  esecuzione1-mpc.txt  esempio_ash.txt  note.txt  phase1_perimeter.md  workflow_2.txt
output_dir/: 1e14c88b-12d9-523c-c481-0d0fdba8b193.json.normalized.json  dictionary_patch.json  dictionary_suggestions.json  kb_patch.json  matching_report_v0.1.json  matching_report_v1.json  normalized_template_v0.1.json  normalized_template_v1.json  patch_actions_v0.1.json  patch_actions_v1.json  run_report_tmp.json  template_base_patch.json  template_base_v0.3.json  template_base_v0.4.json
schemas/: dictionary_patch_v1.schema.json  kb_v0.1.schema.json  matching_report_v1.schema.json  patch_actions_v1.schema.json  schema_generate.py  schema_tipo_v0.1.json  schema_tipo_v0.2.json  template_base_patch_v1.schema.json
scripts/: orchestrator.py  pyproject.toml  run_local.py  template_parser.py
(+409 files in other folders)
