[project]
name = "progetto-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.2",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "fastapi>=0.133.0",
    "uvicorn>=0.41.0",
]
